--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.2",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.11",
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.3.5"
   },
   "license": "MIT"
 }
