--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
+    "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.3"
