--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@types/react-transition-group": "^4.4.2",
     "next": "latest",
     "nprogress": "^0.2.0",
+    "prismjs": "^1.24.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
     "react-markdown": "^6.0.2",
+    "react-simple-code-editor": "^0.11.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
