--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "dependencies": {
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/react-transition-group": "^4.4.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.3",
     "next": "latest",
     "nprogress": "^0.2.0",
     "prismjs": "^1.24.1",
@@ -20,14 +26,22 @@
     "react-simple-code-editor": "^0.11.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-transition-group": "^4.4.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/mongoose": "^5.11.97",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.11",
+    "@types/validator": "^13.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.3.5"
   },
