--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsnd --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "start": "node public/dist/server.js"
+    "start": "node public/dist/server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,9 +22,14 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
+    "jest": "^27.0.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
