--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
+    "@types/yup": "^0.29.13",
     "jest": "^27.0.6",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
