--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
+    "ts-node": "^9.1.1",
     "validator": "^13.6.0",
     "yup": "^0.32.9"
   },
