code editor to send challeng

--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/react-transition-group": "^4.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "next": "latest",
     "nprogress": "^0.2.0",
-    "prismjs": "^1.24.1",
+    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-is": "^17.0.2",
     "react-markdown": "^6.0.2",
-    "react-simple-code-editor": "^0.11.0",
     "react-syntax-highlighter": "^15.4.3",
+    "react-textarea-autosize": "^8.3.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.3",
     "validator": "^13.6.0"
