--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.3",
     "react-textarea-autosize": "^8.3.3",
+    "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.3",
     "validator": "^13.6.0"
