--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "next": "latest",
+    "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
